--- a/src/componets/dish/styles.module.scss
+++ b/src/componets/dish/styles.module.scss
@@ -1,6 +1,24 @@
   .root {
     color: rgb(133, 66, 77);
   }
+
+  .buttonContainer {
+    display: flex; 
+    align-items: center; 
+  }
+
+  .button {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+  
+    &:first-of-type {
+      margin-left: 0px;
+      margin-right: 10px;
+    }
+  }
+
+
   
 
   
