Homework 5: Added a Login button to the header. When the Login button is clicked, a modal window appears containing two fields: Name and Email, and two buttons: OK and Cancel. If the user successfully authorizes, their name and a Logout button will be displayed in the header. The review submission form is now visible only for authorized users. In this form, the Name input field has been replaced with the name of the authorized user.

--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -1,8 +1,14 @@
+.root {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  height: 50px;
+  color: white;
+  background-color: rgb(48, 92, 92);
+  margin: 0 auto;
+  padding: 10px 10px;
+}
 
-  .root {
-    width: 100%;
-    color: rgb(183, 87, 103);
-    background-color: rgb(48, 92, 92);
-    margin: 0 auto;
-    padding: 10px 10px;
-  }
+.user {
+  display: flex;
+}
