--- a/src/components/modal-login-form/styles.module.scss
+++ b/src/components/modal-login-form/styles.module.scss
@@ -1,15 +1,13 @@
 .root {
   position: fixed;
   top: 0;
-  right: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
   display: flex;
-  justify-content: flex-end;
-  align-items: flex-start;
-  padding-top: 60px;
-  padding-right: 30px;
+  justify-content: center;
+  align-items: center;
 }
 
 .modal {
@@ -24,12 +22,17 @@
   justify-content: flex-end;
 
   &:not(:last-child) {
-    margin-bottom: 10px;
+    margin-bottom: 15px;
   }
 }
+
 .buttons {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+
+  & > :not(:last-child) {
+    margin-right: 15px;
+  }
 }
 
 .button {
