--- a/src/components/modal-login-form/styles.module.scss
+++ b/src/components/modal-login-form/styles.module.scss
@@ -1,13 +1,17 @@
 .root {
-  position: fixed;
+  position: absolute;
+  top: 50vh;
+  left: 50vw;
+  transform: translate(-50%, -50%);
+}
+
+.overlay {
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  background-color: rgba(0, 0, 0, 0.395);
 }
 
 .modal {
@@ -30,7 +34,7 @@
   display: flex;
   justify-content: center;
 
-  & > :not(:last-child) {
+  &> :not(:last-child) {
     margin-right: 15px;
   }
 }
