homework for lecture 7

--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -5,10 +5,13 @@
   height: 50px;
   color: white;
   background-color: rgb(48, 92, 92);
-  margin: 0 auto;
-  padding: 10px 10px;
+  padding: 10px ;
 }
 
 .user {
   display: flex;
+}
+
+.button {
+  margin-right: 5px;
 }
