--- a/src/components/review-form/styles.module.scss
+++ b/src/components/review-form/styles.module.scss
@@ -1,6 +1,11 @@
 .root {
   display: flex;
   flex-direction: column;
+  color: white;
+  background: rgb(46, 50, 94);
+  padding: 15px;
+  margin: 15px 0 15px 0;
+  border-radius: 8px;
 }
 
 .field {
@@ -12,13 +17,16 @@
   }
 }
 
-.submitButton {
-  width: fit-content;
+.buttons {
+  display: flex;
+  justify-content: center;
+
+  &> :not(:last-child) {
+    margin-right: 15px;
+  }
 }
 
-  
 
-
-  
-
-  
+.button {
+  width: fit-content;
+}
