--- a/src/components/layout/styles.module.scss
+++ b/src/components/layout/styles.module.scss
@@ -1,11 +1,9 @@
 .root {
+  background-color: rgb(209, 253, 253);
+  height: 100%;
   display: grid;
   grid-template-rows: auto 1fr auto;
   min-height: 100vh;
-}
-
-.content {
-  padding: 0 10px;
 }
 
 .popoverContainer {
