--- a/src/components/cart-button/styles.module.scss
+++ b/src/components/cart-button/styles.module.scss
@@ -4,11 +4,15 @@
 
   .popoverContainer {
     position: absolute;
+    position: absolute;
+    right: 20px;
+    top: 50px;
     background-color: #D1FDFC;
     border-radius: 5px;
     border: 1px solid gray;
     padding: 15px;
   }
+
 
 
   
